--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+*.class
+.classpath
+.project
+.settings/
+.myyumdata
+webapp/WEB-INF/classes/
+out
 .idea
+*.iml
+lib
+writefile
 target
+app
+*.log
