--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,6 @@
     <!-- spring版本号 -->
     <spring.version>4.2.5.RELEASE</spring.version>
 
-    <!-- mybatis版本号 -->
-    <mybatis.version>3.2.8</mybatis.version>
-
-    <!-- mysql驱动版本号 -->
-    <mysql-driver.version>5.1.29</mysql-driver.version>
-
-    <!-- log4j日志包版本号 -->
-    <slf4j.version>1.7.18</slf4j.version>
-    <log4j.version>1.2.17</log4j.version>
 
   </properties>
 
@@ -103,31 +94,36 @@
       <version>${spring.version}</version>
     </dependency>
 
-    <!-- 添加mybatis依赖 -->
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
-      <version>${mybatis.version}</version>
+      <version>3.4.6</version>
     </dependency>
 
-    <!-- 添加mybatis/spring整合包依赖 -->
+
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
-      <version>1.2.2</version>
+      <version>1.3.2</version>
     </dependency>
 
+
     <!-- 添加mysql驱动依赖 -->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql-driver.version}</version>
+      <version>6.0.6</version>
     </dependency>
+
     <!-- 添加数据库连接池依赖 -->
+    <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
-      <version>1.2.2</version>
+      <version>1.4</version>
     </dependency>
 
     <!-- 添加fastjson -->
@@ -139,19 +135,20 @@
 
     <!-- 添加日志相关jar包 -->
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
+      <version>1.7.25</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.1.11</version>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>${slf4j.version}</version>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.1.11</version>
     </dependency>
 
     <!-- log end -->
