--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <!-- 指定范围，在测试时才会加载 -->
       <scope>test</scope>
     </dependency>
@@ -117,6 +117,14 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>6.0.6</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.25.2</version>
+    </dependency>
+
 
     <!-- 添加数据库连接池依赖 -->
     <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
