--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-driverClasss=com.mysql.jdbc.Driver
+driverClasss=com.mysql.cj.jdbc.Driver
 jdbcUrl=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC
 username=root
 password=123456
